# colabfit-cli

./: .gitignore  README.md  pyproject.toml  setup.py
cli/: colabfit.py  utils.py
