[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "colabfit-cli"
version = "0.0.1"
description = "Data query and retrieval from the ColabFit Exchange"
readme = "README.md"
authors = [
    { name="Eric Fuemmeler", email="efuemmel@umn.edu" }
]
requires-python = ">=3.7"
dependencies = [
    "click>=7.0",
    "pymongo",
    "tqdm"
]
urls = { 
    "Homepage" = "https://github.com/colabfit/colabfit-cli"
}

[project.scripts]
colabfit = "cli.colabfit:colabfit"